--- a/epc-modelling/WebContent/WEB-INF/web.xml
+++ b/epc-modelling/WebContent/WEB-INF/web.xml
@@ -1,25 +1,27 @@
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-	version="4.0">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-
+	<display-name>EPC Recommender</display-name>
+	
+	<!-- tomcat needs explicit init-params -->
 	<filter>
-		<filter-name>RequestFilter</filter-name> <!-- mandatory -->
-		<filter-class>at.uibk.epc.filter.RequestFilter</filter-class> <!-- mandatory -->
+		<filter-name>Resteasy</filter-name>
+		<filter-class>
+			org.jboss.resteasy.plugins.server.servlet.FilterDispatcher
+		</filter-class>
+		<init-param>
+			<param-name>javax.ws.rs.Application</param-name>
+			<param-value>at.uibk.epc.rest.EpcAPIApplication</param-value>
+		</init-param>
 	</filter>
-
 	<filter-mapping>
-		<filter-name>RequestFilter</filter-name> <!-- mandatory -->
-		<url-pattern>/*</url-pattern> <!-- either url-pattern or servlet-name is mandatory -->
-		<dispatcher>REQUEST</dispatcher>
+		<filter-name>Resteasy</filter-name>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
-
-	<display-name>EPC Recommender</display-name>
 
 </web-app>
